# JsTsRunner

./: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy  deploy.yml  main-lint-test-deploy.yml
change-name-owner-src/: package-lock.json  package.json
sample_scripts/: calc_42.js  calc_42.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/capabilities/plugins/os/: plugin-os.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  js_helpers.rs  lib.rs  main.rs  tauri_commands.rs  tauri_commands_config.rs  tauri_commands_fs.rs  tauri_commands_state.rs  tauri_commands_tabs.rs  tauri_commans_script.rs  types.rs  utils.rs
src/components/: Enums.ts  Types.ts
src/components/app/: TabbedEditor.tsx  TauriWrappers.ts
src/components/popups/: AboutPopup.tsx  ConfirmPopup.tsx  MessagePopup.tsx  PreferencesPopup.tsx
src/components/wrappers/: DraggableTabs.tsx  SelectWithLabel.tsx  ToolTipObjectToggleButton.tsx  TooltipObjectButton.tsx
src/hooks/: useDebounce.tsx
src/img/: ATTRIBUTION_AND_COPYRIGHT.md  ImageExports.tsx
src/localization/: Localization.ts
src/localization/en/: dialog.json  long_texts.json  messages.json  settings.json  ui.json
src/localization/fi/: dialog.json  long_texts.json  messages.json  settings.json  ui.json
src/localization/rust_i18n_transform/: README.md  index.js  package-lock.json
src/menu/: AppMenu.tsx  AppMenuToolbar.tsx  AppToolbar.tsx  MenuItems.tsx  ToolbarItems.tsx
src/utilities/app/: Code.ts  FileTabs.ts  Images.ts  Notify.ts  Settings.ts  TypeSciptTranspile.ts
