[package]
name = "js_ts_runner"
version = "0.1.1"
description = "A simple program to evaluate JavaScript or TypeScript"
authors = ["VPKSoft"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.1", features = ["full"] }
confy = "0.6.1"
serde_derive = "1.0.204"
tauri-plugin-process = "2.0.0-beta.8"
tauri-plugin-shell = "2.0.0-beta.9"
tauri-plugin-updater = "2.0.0-beta.10"
tauri-plugin-window-state = "=2.0.0-beta.11"
v8 = "0.101.0"
tauri-plugin-dialog = "2.0.0-beta.11"
chrono = { version = "0.4.38", features = ["serde"] }
tauri-plugin-os = "2.0.0-beta.8"
rust-i18n = "3.0.1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2.0.0-beta.11"
